--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                     <h3>🚀 Join the Beta Waitlist</h3>
                     <p style="margin-bottom: 1.5rem; opacity: 0.8;">Be among the first to experience the future of VAT compliance.</p>
                     
-                    <form id="betaForm" name="beta-signup" data-netlify="true" method="POST">
+                    <form id="betaForm" name="beta-signup" data-netlify="true" method="POST" action="/thank-you.html">>
                         <input type="hidden" name="form-name" value="beta-signup">
                         <div class="form-group">
                             <input type="email" id="email" name="email" placeholder="your.email@company.com" required>
